--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "4.3.0",
+    "aos": "^2.3.4",
     "bootstrap": "^5.1.3",
     "flatpickr": "^4.6.9",
     "stimulus": "^3.0.1",
