--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "bootstrap": "^5.1.3",
     "flatpickr": "^4.6.9",
     "stimulus": "^3.0.1",
+    "stimulus-clipboard": "^3.0.0",
     "stimulus-flatpickr": "^1.4.0",
     "turbolinks": "^5.2.0"
   },
