--- a/config/webpacker.yml
+++ b/config/webpacker.yml
@@ -19,6 +19,8 @@ default: &default
   # Extract and emit a css file
   extract_css: false
 
+  service_workers_entry_path: service_workers
+
   static_assets_extensions:
     - .jpg
     - .jpeg
