--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "stimulus": "^3.0.1",
     "stimulus-clipboard": "^3.0.0",
     "stimulus-flatpickr": "^1.4.0",
-    "turbolinks": "^5.2.0"
+    "turbolinks": "^5.2.0",
+    "webpacker-pwa": "^0.1.2"
   },
   "version": "0.1.0",
   "devDependencies": {
