--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,10 +1,15 @@
 {
-  "short_name": "Shtgnz",
+  "short_name": "Shotgunz",
   "name": "Shotgunz",
   "icons": [
     {
       "src": "android-icon-192x192.png",
       "sizes": "192x192",
+      "type": "image/png"
+    }
+    {
+      "src": "apple-touch-icon.png",
+      "sizes": "180x180",
       "type": "image/png"
     }
   ],
